@@ -6,12 +6,13 @@ import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 public class API {
     public String translate(String langFrom, String langTo, String text) throws IOException {
 
         String urlStr = "https://script.google.com/macros/s/AKfycbxYCfhmSSM6P4mmNB-xa3H9Ku8jNbIdiyaPWSemwZXCql169ltg/exec" +
-                "?q=" + URLEncoder.encode(text, "UTF-8") +
+                "?q=" + URLEncoder.encode(text, StandardCharsets.UTF_8) +
                 "&target=" + langTo +
                 "&source=" + langFrom;
         URL url = new URL(urlStr);
